--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/75bba14e81.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/styl.css">
+    <link rel="stylesheet" href="./styl.css">
 </head>
 
 <body>
